SERVER-55340 Initialize BucketCatalog::_numPreviouslyCommittedMeasurements